--- a/package.json
+++ b/package.json
@@ -5,15 +5,29 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "wc:build": "vue-cli-service build --mode production --target wc-async --name vue-service src/wcBuildApp.vue --inline-vue",
+    "lint": "vue-cli-service lint",
+    "styleguide": "vue-cli-service styleguidist",
+    "styleguide:build": "vue-cli-service styleguidist:build"
   },
   "dependencies": {
+    "@types/body-scroll-lock": "^2.6.1",
+    "@types/hammerjs": "^2.0.36",
+    "@types/swiper": "^5.2.0",
+    "axios": "^0.19.0",
+    "body-scroll-lock": "^2.6.4",
     "core-js": "^3.4.4",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
+    "swiper": "^5.2.1",
+    "velocity-animate": "^2.0.5",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -24,6 +38,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "typescript": "~3.5.3",
+    "vue-cli-plugin-styleguidist": "^4.2.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
