--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/animejs": "^3.1.0",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/hammerjs": "^2.0.36",
+    "@types/lodash": "^4.14.149",
     "@types/swiper": "^5.2.0",
     "animejs": "^3.1.0",
     "axios": "^0.19.2",
     "body-scroll-lock": "^2.6.4",
     "core-js": "^3.4.4",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "swiper": "^5.2.1",
     "velocity-animate": "^2.0.5",
