--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "styleguide:build": "vue-cli-service styleguidist:build"
   },
   "dependencies": {
+    "@egjs/flicking": "^3.4.7",
     "@types/animejs": "^3.1.0",
     "@types/body-scroll-lock": "^2.6.1",
     "@types/hammerjs": "^2.0.36",
