--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.24.0",
     "qrcode": "^1.4.4",
     "swiper": "^5.3.6",
+    "typed.js": "^2.0.11",
     "velocity-animate": "^2.0.5",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
