--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.22.4",
     "vue-lottie": "^0.2.1",
     "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.1.6",
