--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "animejs": "^3.1.0",
     "axios": "^0.19.2",
     "body-scroll-lock": "^2.6.4",
-    "core-js": "^3.6.4",
+    "core-js": "^3.8.3",
     "dayjs": "^1.9.6",
     "hammerjs": "^2.0.8",
     "jsbarcode": "^3.11.0",
@@ -31,7 +31,7 @@
     "swiper": "^5.3.6",
     "typed.js": "^2.0.11",
     "velocity-animate": "^2.0.5",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
     "vue-lottie": "^0.2.1",
@@ -41,15 +41,20 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-typescript": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.5.0",
+    "husky": "^5.0.8",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.5.3",
-    "vue-cli-plugin-styleguidist": "^4.13.1",
-    "vue-template-compiler": "^2.6.10"
+    "typescript": "^4.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vue-type-check": "^1.1.0"
   }
 }
