--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.22.4",
     "vue-lottie": "^0.2.1",
     "vue-property-decorator": "^8.4.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.2",
-    "vuex-class": "^0.3.2",
-    "vue-i18n": "^8.22.4"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.0",
@@ -51,6 +51,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.34.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.5.3",
     "vue-template-compiler": "^2.6.10"
