--- a/package.json
+++ b/package.json
@@ -11,46 +11,50 @@
     "styleguide:build": "vue-cli-service styleguidist:build"
   },
   "dependencies": {
-    "@egjs/flicking": "^3.4.7",
-    "@types/animejs": "^3.1.0",
-    "@types/body-scroll-lock": "^2.6.1",
-    "@types/hammerjs": "^2.0.36",
-    "@types/lodash": "^4.14.149",
-    "@types/qrcode": "^1.3.4",
-    "@types/swiper": "^5.2.1",
+    "@egjs/flicking": "^3.8.3",
     "animejs": "^3.1.0",
     "axios": "^0.19.2",
-    "body-scroll-lock": "^2.6.4",
-    "core-js": "^3.6.4",
-    "dayjs": "^1.9.6",
+    "body-scroll-lock": "^2.7.1",
+    "core-js": "^3.14.0",
+    "dayjs": "^1.10.5",
     "hammerjs": "^2.0.8",
-    "jsbarcode": "^3.11.0",
-    "lodash": "^4.17.20",
-    "moment": "^2.24.0",
+    "jsbarcode": "^3.11.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "qrcode": "^1.4.4",
-    "swiper": "^5.3.6",
+    "swiper": "^5.4.5",
     "typed.js": "^2.0.11",
-    "velocity-animate": "^2.0.5",
-    "vue": "^2.6.10",
+    "vue": "^2.6.14",
     "vue-awesome-swiper": "^3.1.3",
-    "vue-class-component": "^7.2.3",
-    "vue-i18n": "^8.22.4",
+    "vue-class-component": "^7.2.6",
     "vue-lottie": "^0.2.1",
-    "vue-property-decorator": "^8.4.0",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.2",
-    "vuex-class": "^0.3.2"
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
+    "vuex-class": "^0.3.2",
+    "vue-i18n": "^8.24.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
-    "node-sass": "^4.14.1",
+    "@types/animejs": "^3.1.3",
+    "@types/body-scroll-lock": "^2.6.1",
+    "@types/hammerjs": "^2.0.39",
+    "@types/lodash": "^4.14.170",
+    "@types/qrcode": "^1.4.0",
+    "@types/swiper": "^5.4.2",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-router": "^4.5.13",
+    "@vue/cli-plugin-typescript": "^4.5.13",
+    "@vue/cli-plugin-vuex": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
+    "@vue/eslint-config-typescript": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.34.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.5.3",
-    "vue-cli-plugin-styleguidist": "^4.13.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.14"
   }
 }
