--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.2.6",
+    "vue-cropperjs": "^4.2.0",
+    "vue-i18n": "^8.24.4",
     "vue-lottie": "^0.2.1",
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-class": "^0.3.2",
-    "vue-i18n": "^8.24.4"
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.3",
